--- a/StockPressure/App.config
+++ b/StockPressure/App.config
@@ -8,18 +8,13 @@
     <add key="showVolumes" value="false" />
 
     <!-- 
-      An integer between 1 and 100.
-      1 = Don't compress any numbers down. Let the numbers speak for themselves.
-      
-      GME is about to EXPLODE....
-      With a pressure line of 50, GME is currently reporting at 81. (i.e. a theoretical SHORT of 131%... 131-50 = 81)
-      With a pressure line of 30, that same report would be 101     (131 - 30 = 101)
-      With a pressure line of 100, only the things that are BUSTING at the seams will even show up above 1.
-      With a pressure line of 30-50, most things that are high enough pressure to see a squeeze should the end result be in the double-digits, 
-          and should become obvious for MY risk level. Your risk level may not be as high as mine.
-      The higher the number, the less risk YOU have in guessing if this is a real squeeze or not. However, you also risk missing the squeeze entirely.
-    -->
-    <add key="pressureLine" value="100" />
+        At what pressure line do you believe will still be "squeezing" 
+        the short sellers?
+-->
+    <add key="pressureLine" value="70" />
+
+    <add key="apiKey" value="c6af9627d4msh613afd1a06a9232p1d69a9jsn940922324059" />
+    <add key="apiHost" value="apidojo-yahoo-finance-v1.p.rapidapi.com" />
 
   </appSettings>
 </configuration>
